--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div class="mdl-cell mdl-cell--6-col">
             <div class="demo-card-square mdl-card mdl-shadow--3dp">
                 <div class="mdl-card__title mdl-card--expand" id="logo">
-                    <h2 class="mdl-card__title-text" id="title">Lockdown ends in:</h2>
+                    <h2 class="mdl-card__title-text" id="title">Lockdown over (kinda)</h2>
                 </div>
-                <div class="mdl-card__supporting-text" id="countdown"></div>
+<!--                 <div class="mdl-card__supporting-text" id="countdown"></div> -->
             </div>
         </div>
     </center>
